--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MPGTeamBuilder</title>
+    <link href="./bower_components/bootstrap-css/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <h1>MPGTeamBuilder</h1>
